캘린더 생성

--- a/App/Info.plist
+++ b/App/Info.plist
@@ -7,6 +7,9 @@
 		<string>Pretendard-Medium</string>
 		<string>Pretendard-Bold</string>
 		<string>Pretendard-Regular</string>
+		<string>Prata-Regular</string>
+		<string>PT Mono</string>
+		<string>PT Mono Bold</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
